# Parallel_prog_Lab_3

./: CMakeLists.txt  README.md  Third_1.cpp  plot.py  run_tests.ps1
